[tool.poetry]
name = "picnik"
version = "1.1.1"
description = "A package to make isoconversional computations for non-isothermal kinetics"
authors = ["ErickErock <ramirez.orozco.erick@gmail.com>","Sergio Hernandez <sergiohzlz@ciencias.unam.mx>","Nicolas Kano Chavira <nick.kano@ciencias.unam.mx>"]
license = "MIT License"
readme = "README.md"
repository = "https://github.com/ErickErock/pICNIK"
keywords = ["non-isothermal kinetics", "isoconversion","isoconversional computations","model-free predictions"]
packages = [{include = "picnik.py"}]
[tool.poetry.dependencies]
python = "^3.7"
numpy = "^2.0.0"
pandas = "^2.2.0"
matplotlib = "^3.10.0"
scipy = "^1.15.3"
rxnmodel = "*"
picnik_integrator="*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
